--- a/index.html
+++ b/index.html
@@ -243,75 +243,75 @@
             <div class="container">
                 <!-- txt -->
                 <div>
-                    <h2>Benefits of working with us</h2>
+                    <h2 class="ft-size-2 txt-center txt-white pd-b-2">Benefits of working with us</h2>
 
                 </div>
 
                 <!-- card -->
                 <div class="row">
                     <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
-                        <div class="bg-white">
-                            <h5 class="txt-secondary ft-size-50">01</h5>
-                            <div class="sub-title-card txt-secondary">High Quality</div>
-                            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
+                        <div class="bg-white pd-1">
+                            <h5 class="txt-secondary ft-size-50 pd-b-1">01</h5>
+                            <div class="sub-title-card txt-secondary pd-b-1">High Quality</div>
+                            <div class="pd-b-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
                                 dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
                                 laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
-                            <div><button>more</button></div>
+                            <div><button class="btn btn-viola">more</button></div>
                         </div>
                     </div>
 
                     <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
-                        <div class="bg-white">
-                            <h5 class="txt-secondary ft-size-50">01</h5>
-                            <div class="sub-title-card txt-secondary">High Quality</div>
-                            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
+                        <div class="bg-white pd-1">
+                            <h5 class="txt-secondary ft-size-50 pd-b-1">01</h5>
+                            <div class="sub-title-card txt-secondary pd-b-1">High Quality</div>
+                            <div class="pd-b-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
                                 dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
                                 laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
-                            <div><button>more</button></div>
+                            <div><button class="btn btn-viola">more</button></div>
                         </div>
                     </div>
 
                     <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
-                        <div class="bg-white">
-                            <h5 class="txt-secondary ft-size-50">01</h5>
-                            <div class="sub-title-card txt-secondary">High Quality</div>
-                            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
+                        <div class="bg-white pd-1">
+                            <h5 class="txt-secondary ft-size-50 pd-b-1">01</h5>
+                            <div class="sub-title-card txt-secondary pd-b-1">High Quality</div>
+                            <div class="pd-b-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
                                 dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
                                 laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
-                            <div><button>more</button></div>
+                            <div><button class="btn btn-viola">more</button></div>
                         </div>
                     </div>
 
                     <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
-                        <div class="bg-white">
-                            <h5 class="txt-secondary ft-size-50">01</h5>
-                            <div class="sub-title-card txt-secondary">High Quality</div>
-                            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
+                        <div class="bg-white pd-1">
+                            <h5 class="txt-secondary ft-size-50 pd-b-1">01</h5>
+                            <div class="sub-title-card txt-secondary pd-b-1">High Quality</div>
+                            <div class="pd-b-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
                                 dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
                                 laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
-                            <div><button>more</button></div>
+                            <div><button class="btn btn-viola">more</button></div>
                         </div>
                     </div>
 
                     <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
-                        <div class="bg-white">
-                            <h5 class="txt-secondary ft-size-50">01</h5>
-                            <div class="sub-title-card txt-secondary">High Quality</div>
-                            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
+                        <div class="bg-white pd-1">
+                            <h5 class="txt-secondary ft-size-50 pd-b-1">01</h5>
+                            <div class="sub-title-card txt-secondary pd-b-1">High Quality</div>
+                            <div class="pd-b-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
                                 dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
                                 laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
-                            <div><button>more</button></div>
+                            <div><button class="btn btn-viola">more</button></div>
                         </div>
                     </div>
 
                     <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
-                        <div class="bg-white">
-                            <h5 class="txt-secondary ft-size-50">01</h5>
-                            <div class="sub-title-card txt-secondary">High Quality</div>
-                            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
+                        <div class="bg-white pd-1">
+                            <h5 class="txt-secondary ft-size-50 pd-b-1">01</h5>
+                            <div class="sub-title-card txt-secondary pd-b-1">High Quality</div>
+                            <div class="pd-b-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
                                 dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
                                 laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
-                            <div><button>more</button></div>
+                            <div><button class="btn btn-viola">more</button></div>
                         </div>
                     </div>
 
