section about us

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <div class="row bg-primary-light hg-100 pd-1">
                             <!-- testo  -->
                             <div class="col-lg-1-2">
-                                <h2 class="txt-primary pd-b-1 sub-title-card">Get a demo application</h2>
+                                <h2 class="txt-primary pd-b-1 sub-title-card ft-size-1_1">Get a demo application</h2>
                                 <div class="pd-b-1">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas eos corporis,
                                         repellat nemo sit fugit, non dolor quis quasi quae assumenda distinctio incidunt
@@ -69,7 +69,7 @@
                         <div class="bg-primary-light hg-100 pd-1">
                             <div class="pd-b-1 txt-center ft-size-50 "><i class="txt-primary fa-solid fa-file-code"></i>
                             </div>
-                            <div class="txt-primary pd-b-1 txt-center sub-title-card">Clean code</div>
+                            <div class="txt-primary pd-b-1 txt-center sub-title-card ft-size-1_1">Clean code</div>
                             <div class="txt-center">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eius illo dicta
                                     totam eos voluptate ab maiores nobis laudantium est harum, doloribus nisi
@@ -81,7 +81,7 @@
                         <div class="bg-primary-light hg-100 pd-1">
                             <div class="pd-b-1 txt-center ft-size-50"><i
                                     class="txt-primary fa-solid fa-compass-drafting"></i></div>
-                            <div class="txt-primary pd-b-1 txt-center sub-title-card">Web Design</div>
+                            <div class="txt-primary pd-b-1 txt-center sub-title-card ft-size-1_1">Web Design</div>
                             <div class="txt-center">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eius illo dicta
                                     totam eos voluptate ab maiores nobis laudantium est harum, doloribus nisi
@@ -93,7 +93,7 @@
                         <div class="bg-primary-light hg-100 pd-1">
                             <div class="pd-b-1 txt-center ft-size-50"><i
                                     class="txt-primary fa-solid fa-laptop-code"></i></div>
-                            <div class="txt-primary pd-b-1 txt-center sub-title-card">Development</div>
+                            <div class="txt-primary pd-b-1 txt-center sub-title-card ft-size-1_1">Development</div>
                             <div class="txt-center">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eius illo dicta
                                     totam eos voluptate ab maiores nobis laudantium est harum, doloribus nisi
@@ -105,7 +105,7 @@
                         <div class="bg-primary-light hg-100 pd-1">
                             <div class="pd-b-1 txt-center ft-size-50"><i class="txt-primary fa-solid fa-bullhorn"></i>
                             </div>
-                            <div class="txt-primary pd-b-1 txt-center sub-title-card">Branding</div>
+                            <div class="txt-primary pd-b-1 txt-center sub-title-card ft-size-1_1">Branding</div>
                             <div class="txt-center">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eius illo dicta
                                     totam eos voluptate ab maiores nobis laudantium est harum, doloribus nisi
@@ -182,7 +182,7 @@
                     <div class="card bg-secondary row-md mg-b-1 radius pd-l-r-1-2 p-t-b-1">
                         <!-- img-banner  -->
                         <div class="card col-md-1-3 col-lg-1-4">
-                            <img class="img-reboot img-circle" src="img/testimonial1.jpg" alt="">
+                            <img class="mg-auto img-reboot img-circle" src="img/testimonial1.jpg" alt="">
                         </div>
 
                         <!-- txt-banner  -->
@@ -200,7 +200,7 @@
                     <div class="card bg-secondary row-md mg-b-1 radius pd-l-r-1-2 p-t-b-1">
                         <!-- img-banner  -->
                         <div class="card col-md-1-3 col-lg-1-4">
-                            <img class="img-reboot img-circle" src="img/testimonial2.jpg" alt="">
+                            <img class="mg-auto img-reboot img-circle" src="img/testimonial2.jpg" alt="">
                         </div>
 
                         <!-- txt-banner  -->
@@ -218,7 +218,7 @@
                     <div class="card bg-secondary row-md radius pd-l-r-1-2 p-t-b-1">
                         <!-- img-banner  -->
                         <div class="card col-md-1-3 col-lg-1-4">
-                            <img class="img-reboot img-circle" src="img/testimonial3.jpg" alt="">
+                            <img class="mg-auto img-reboot img-circle" src="img/testimonial3.jpg" alt="">
                         </div>
 
                         <!-- txt-banner  -->
@@ -327,30 +327,30 @@
             <div class="container">
                 <div class="row">
                     <!-- txt  -->
-                    <div class="col-md-2-3 col-lg-3-4">
-                        <div class="ft-size-50">About Us</div>
+                    <div class="col-md-2-3 col-lg-3-4 pd-1">
+                        <div class="ft-size-50 txt-secondary pd-b-1 ft-bold">About Us</div>
                         <div>
                             <p>
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam perferendis odit
-                                reprehenderit excepturi placeat. Et recusandae odio ipsum odit! Minus quisquam id
-                                deleniti hic veritatis mollitia dolore dolores impedit consequatur.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate adipisci, animi necessitatibus rem amet perferendis, repudiandae ad ducimus nam est quibusdam id non nesciunt magnam quod, tenetur magni quisquam doloremque.
+                                Minus, veniam. Veniam, facilis eaque corporis corrupti vel nihil sint qui quibusdam itaque totam ea accusantium debitis quisquam error, cum sunt, quasi mollitia similique! Fugiat tenetur sequi eius tempore incidunt!
+                                Dolores nihil ullam voluptatem sapiente molestias id odio quis culpa quidem perspiciatis, mollitia eligendi explicabo ex quod expedita dolor tenetur similique maxime quisquam non doloribus et! Quia, odit laboriosam. Quibusdam!
                             </p>
                         </div>
 
                     </div>
 
                     <!-- img+txt  -->
-                    <div class="col-md-1-3 col-lg-1-4">
-                        <div>
-                            <img class="img-reboot" src="img/about.jpg" alt="">
+                    <div class="col-md-1-3 col-lg-1-4 pd-1">
+                        <div class="pd-b-1-2">
+                            <img class="img-reboot img-circle" src="img/about.jpg" alt="">
                         </div>
-                        <div>
-                            <div class="sub-title-card txt-secondary">I help companies
+                        <div >
+                            <div class="sub-title-card txt-secondary pd-b-1-2">I help companies
                                 tincidunt tortor aliquam
                                 nulla facilisi cras
                                 fermentum odio.
                             </div>
-                            <div><a href="#"><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a></div>
+                            <div><button class="btn btn-viola ft-size-0_7"><i class="fa-brands fa-linkedin"></i> Find me on linkedin</button></div>
 
                         </div>
 
