--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="container">
                 <!-- txt -->
                 <div class="pd-b-2">
-                    <div class="txt-center ft-size-1_1 pd-b-2">TESTIMONIAL
+                    <div class="txt-center ft-size-1_1 pd-b-2 txt-gray">TESTIMONIAL
                     </div>
                     <h2 class="ft-size-2 txt-center txt-secondary pd-b-2">We are committed expert partners</h2>
                     <div class="txt-center ">
@@ -363,23 +363,23 @@
         <section class="bg-secondary">
             <!-- title  -->
             <div>
-                <div>
+                <div class="txt-center ft-size-1_1 pd-b-1-2 txt-gray">
                     Get Started
                 </div>
-                <div>
+                <div class="sub-title-card txt-center txt-white pd-b-1">
                     Simple, Transparent Pricing
                 </div>
-                <div class="ft-size-50 ft-bold">
+                <div class="ft-size-50 ft-bold txt-center txt-yellow pd-b-1">
                     It's Free
                 </div>
 
             </div>
             <!-- description +btn  -->
-            <div class="col-md-1-2 col-lg-1-2">
-                <div>Weye still in beta and we will be for awhile. As we add more
+            <div class="col-md-1-2 col-lg-1-2  txt-white mg-auto">
+                <div class="txt-center pd-1-2 txt-gray">Weye still in beta and we will be for awhile. As we add more
                     functionality, well look into other plans with more controls-</div>
-                <button>Get started</button>
-                <div>Copyright 2021 Boolean • Classe XX •</div>
+                <div class="txt-center pd-1-2"><button class="mg-auto btn btn-large" >Get started</button></div>
+                <div class="txt-center pd-1-2 txt-gray">Copyright 2021 Boolean • Classe XX •</div>
 
             </div>
         </section>
