--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 
             </div>
             <!-- description +btn  -->
-            <div class="col-md-1-2 col-lg-1-2  txt-white mg-auto">
+            <div class="col-md-1-2 col-lg-1-2 mg-auto txt-white ">
                 <div class="txt-center pd-1-2 txt-gray">Weye still in beta and we will be for awhile. As we add more
                     functionality, well look into other plans with more controls-</div>
                 <div class="txt-center pd-1-2"><button class="mg-auto btn btn-large" >Get started</button></div>
@@ -385,18 +385,15 @@
         </section>
     </main>
 
-    <footer class="bg-third">
-        <div>
+    <footer class="bg-third pd-1">
+        <div class="col-md-1-2 col-lg-1-2 mg-auto txt-center txt-white pd-b-2">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur maiores voluptatem praesentium tempora
-            illo, blanditiis doloremque cupiditate dignissimos accusamus debitis aperiam eaque perferendis similique
-            ipsam quam a quisquam ipsa! Similique!
+            illo, blanditiis doloremque cupiditate dignissimos 
 
         </div>
-        <div>
+        <div class="col-md-1-2 col-lg-1-2 mg-auto txt-center txt-white">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt impedit velit suscipit! Iure obcaecati
-            doloribus recusandae nam, adipisci quae itaque cum minus sed similique aut accusantium deleniti explicabo et
-            voluptatibus!
-
+            doloribus recusandae.
         </div>
 
     </footer>
