box circolare card

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                     exercitationem reiciendis esse quidem nostrum aliquam, quasi corporis nemo.
                                 </p>
                             </div>
-                            <div class="txt-center"><i class=" fa-solid fa-down-long"></i></div>
+                            <div class="txt-center row jc-center ai-center bg-secondary box_circle mg-auto"><i class=" fa-solid fa-down-long"></i></div>
                         </div>
                     </div>
 
